# opl-emu

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  justfile
.github/workflows/: rust.yml
.zed/: settings.json
examples/cliplayer/: Cargo.toml  justfile
examples/cliplayer/src/: main.rs
examples/extract/: Cargo.toml
examples/extract/src/: main.rs
examples/webplayer/: Cargo.toml  index.html  justfile  oplProcessor.js
examples/webplayer/src/: lib.rs
src/: backend_sdl.rs  backend_web.rs  chip.rs  chip_test.rs  file_db_w3d.rs  lib.rs  lib_test.rs  sdl.rs  web.rs  web_worklet.rs
src/catalog/: mod.rs  util.rs  w3d.rs
web/: opl.wasm  oplProcessor.js  worklet.wasm
