[package]
name = "opl-emu"
version = "0.2.5"
edition = "2024"
description = "OPL Emulator"
license = "GPL-3.0"
repository = "https://github.com/Ragnaroek/opl-emu"

[lib]
name = "opl"

[[bin]]
name = "opl-player"
path = "src/bin/player/main.rs"
required-features = ["player-bin"]

[[bin]]
name = "opl-extract"
path = "src/bin/extract/main.rs"
required-features = ["extract-bin"]

[[bin]]
name = "soundcheck-w3d"
path = "src/bin/soundcheck-w3d/main.rs"
required-features = ["soundcheck-w3d-bin"]

[features]
sdl = ["dep:sdl2"]
web = []
catalog = []
extract-bin = ["dep:clap"]
player-bin = ["dep:clap", "dep:ratatui"]
soundcheck-w3d-bin = ["dep:clap", "dep:ratatui"]

[dependencies]
sdl2 = { version = "0.37.0", optional = true, default-features = false, features = [
] }
clap = { version = "4.5.20", optional = true, features = ["derive"] }
ratatui = { version = "0.29.0", optional = true }
