[package]
name = "opl-emu"
version = "0.3.1"
edition = "2024"
description = "OPL Emulator"
license = "GPL-3.0"
repository = "https://github.com/Ragnaroek/opl-emu"

[lib]
name = "opl"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "opl-player"
path = "src/bin/player/main.rs"
required-features = ["player-bin"]

[[bin]]
name = "opl-extract"
path = "src/bin/extract/main.rs"
required-features = ["extract-bin"]

[[bin]]
name = "soundcheck-w3d"
path = "src/bin/soundcheck-w3d/main.rs"
required-features = ["soundcheck-w3d-bin"]

[features]
sdl = [
    "chip",
    "dep:sdl2"
]
web = [
    "chip",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
    "dep:js-sys",
]
web-worklet = [
    "chip",
    "dep:mini-alloc",
]
catalog = []
chip = [
    "dep:libm"
]
player-bin = ["dep:clap", "dep:ratatui"]


[dependencies]
sdl2 = { version = "0.38.0", optional = true, default-features = false, features = [
] }
clap = { version = "4.5.53", optional = true, features = ["derive"] }
ratatui = { version = "0.30.0", optional = true }

# feature chip
libm = { version = "0.2.15", optional = true }

# feature web
wasm-bindgen = { version = "0.2.106", optional = true }
wasm-bindgen-futures = { version = "0.4.56", optional = true }
js-sys = { version = "0.3.83", optional = true }
web-sys = { version = "0.3.83", optional = true, features = [
    "AudioContext",
    "AudioContextState",
    "AudioDestinationNode",
    "AudioWorklet",
    "AudioWorkletNode",
    "AudioWorkletNodeOptions",
    "AudioWorkletProcessor",
    "MessagePort",
] }

# feature web-worklet
mini-alloc = {version = "1.0.0", optional = true }

[profile.release]
panic = "abort"
